--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,11 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1 
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Upload files to S3
         run: |
-          aws s3 sync website/ s3://${{ secrets.S3_BUCKET }} \
+          aws s3 sync . s3://${{ secrets.S3_BUCKET }} \
             --delete \
             --exclude ".git/*" \
             --exclude ".github/*"
